# Hostel-Management-System

./: .gitignore  README.md  auth tokens.txt  main.py  requirements.txt  run.py  samp.txt  sec
app/: __init__.py
app/models/: __init__.py  gatepass.py  user.py
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  conftest.py  main.py
backend/app/core/: config.py  constants.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  gatepass.py  user.py
backend/app/repositories/: gatepass_repository.py  user_repository.py
backend/app/routers/: admin.py  auth.py  gatepass.py  security.py  student.py  warden.py
backend/app/routes/: admin.py  auth.py  gatepass.py  user.py
backend/app/schemas/: auth.py  gatepass.py  token.py  user.py
backend/app/services/: auth_service.py  email_service.py  gatepass_service.py  pdf_service.py  qr_service.py  user_service.py
backend/app/utils/: helpers.py
backend/instance/: hostel.db
backend/migrations/: env.py
backend/migrations/versions/: 0f9f0c9f0509_add_admin_role_to_userrole_enum.py  513880dd472e_add_password_reset_token_fields.py  9c373a11e097_add_admin_to_userrole_enum.py  ab75b41bfa1b_create_users_and_gate_passes_tables.py  dcf277fbe3a2_rename_from_date_to_out_date_in_gate_.py
backend/tests/: conftest.py  test_auth.py  test_gatepass.py  test_users.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
instance/: hostel.db
migrations/: alembic.ini
plan/: file_stucture.txt  route.txt
(+134 files in other folders)
